make language optional. Default will predict language
