# src/api.ts
@@ -63,11 +63,11 @@ export interface CreateVideoTaskRequestDto {
      */
     'autoApprove'?: boolean;
     /**
-     * Language the subtitles should be in. Defaults to English.
+     * Language the subtitles should be in Valid languages: \'af\',\'am\',\'ar\',\'as\',\'az\',\'ba\',\'be\',\'bg\',\'bn\',\'bo\',\'br\',\'bs\',\'ca\',\'cs\',\'cy\',\'da\', \'de\',\'el\',\'en\',\'es\',\'et\',\'eu\',\'fa\',\'fi\',\'fo\',\'fr\',\'gl\',\'gu\',\'ha\',\'haw\',\'he\',\'hi\', \'hr\',\'ht\',\'hu\',\'hy\',\'id\',\'is\',\'it\',\'ja\',\'jw\',\'ka\',\'kk\',\'km\',\'kn\',\'ko\',\'la\',\'lb\', \'ln\',\'lo\',\'lt\',\'lv\',\'mg\',\'mi\',\'mk\',\'ml\',\'mn\',\'mr\',\'ms\',\'mt\',\'my\',\'ne\',\'nl\',\'nn\', \'no\',\'oc\',\'pa\',\'pl\',\'ps\',\'pt\',\'ro\',\'ru\',\'sa\',\'sd\',\'si\',\'sk\',\'sl\',\'sn\',\'so\',\'sq\', \'sr\',\'su\',\'sv\',\'sw\',\'ta\',\'te\',\'tg\',\'th\',\'tk\',\'tl\',\'tr\',\'tt\',\'uk\',\'ur\',\'uz\',\'vi\', \'yi\',\'yo\',\'zh\',\'yue\'
      * @type {string}
      * @memberof CreateVideoTaskRequestDto
      */
-    'language': string;
+    'language'?: string;
 }
 /**
  * 
